# oastc

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  common.h  fp16.h  oastc.h  oastc_dec.cpp  optionparser.h  test_generator.cpp  unit_tests.cpp
inputs/0ad/: LICENSE.txt
